--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
       <div class="section-content">
         <center>
           <h2>Resume</h2>
-          <a href="file.pdf" target="_blank" class="download-button"
+          <a href="683fc6bd-e9f2-447e-9da5-ee8dabb79ad9.jpg" target="_blank" class="download-button"
             >Download CV</a
           >
         </center>
