--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <div class="header-content">
         <!-- Add your profile picture here -->
         <img
-          src="passport photo.jpg"
+          src="ca702459-25d8-49dc-ac1d-ac8b0cfe6119.jpg"
           alt="Your Profile Picture"
           class="profile-picture"
         />
